# 4ai-v2-audit

./: .eslintrc.json  .gitignore  AUDIT_COMPLETE_STATUS.md  BUGS_AND_FIXES.md  CROSS_PLATFORM_AUDIT_ENHANCEMENT.md  CURRENT_STATUS_FOR_MANUS.md  DEBUG_PROTOCOL.md  FIRST_TODO_FOR_MANUS.md  LICENSE  MANUS_COLLABORATION_MANUAL.md  PRZEKAZANIE_DO_MANUSA.md  README.md  TODO_REDIRECT.md  chain-logic-debug.js  create-icon.ps1  debug-analysis.js  enhanced-signal-test.html  final-analysis.js  immediate-title-test.js  index.html  manual-test.js  package-lock.json  package.json  prettier.config.js  setup-instructions.md  simple-immediate-test.js  simple-test.html  test-chatgpt-selectors.html  test-comprehensive-functionality.js  test-immediate-signal.html  test-launcher.js  test-runner.js  test-selector-existence.js  test-simple-monitoring.html  test-simple-monitoring.js  test-title-communication.js  test-title-only.js  tsconfig.json  vite.config.ts
audit/: ACTIVE_TODO.md  AI_COMPETENCY_DIVISION_MATRIX.md  ARCHIVE_TODO.md  MANUS_AUDIT_CURRENT_STATUS.md  MANUS_EXECUTOR_PACKAGE.md  MANUS_TESTING_PROTOCOL.md  README.md  TECHNICAL_IMPLEMENTATION_SUMMARY.md  TODO_AUDYT.md  TODO_AUDYT_ENHANCED.md  TODO_AUDYT_FINAL.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: webai-selectors.json
src-tauri/scripts/: init.js
src-tauri/src/: main.rs  main_backup.rs  utils.rs
src-tauri/src/cmd/: chains.rs  clipboard.rs  config.rs  debate.rs  dialog.rs  drop.rs  history.rs  logging.rs  meta.rs  mod.rs  webview.rs  webview_simple.rs  webview_test.rs
(+53 files in other folders)
