[package]
name = "tauri_app_v2"
version = "2.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.4.0"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
